--- a/arch/arm64/configs/lineageos_a3xelte_defconfig
+++ b/arch/arm64/configs/lineageos_a3xelte_defconfig
@@ -389,6 +389,7 @@ CONFIG_MMAP_READAROUND_LIMIT=0
 CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUG is not set
+CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_CMA_PINPAGE_MIGRATION=y
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ARMV7_COMPAT=y
