ODROID-XU4: Add LIRC interface driver (CONFIG_LIRC)
Change-Id: I3650557a73d55de3b769dee54ea025f104a0695b

--- a/arch/arm/configs/odroidxu3_defconfig
+++ b/arch/arm/configs/odroidxu3_defconfig
@@ -3047,7 +3047,8 @@ CONFIG_DVB_MAX_ADAPTERS=8
 CONFIG_RC_CORE=y
 CONFIG_RC_MAP=y
 CONFIG_RC_DECODERS=y
-# CONFIG_LIRC is not set
+CONFIG_LIRC=m
+CONFIG_IR_LIRC_CODEC=m
 CONFIG_IR_NEC_DECODER=y
 CONFIG_IR_RC5_DECODER=y
 CONFIG_IR_RC6_DECODER=y
