[mali] update gpu integration

--- a/arch/arm/boot/dts/exynos5422-odroidxu3-common.dtsi
+++ b/arch/arm/boot/dts/exynos5422-odroidxu3-common.dtsi
@@ -92,6 +92,11 @@
 		clock-names = "fout_vpll", "dout_aclk_g3d", "clk_mali";
 		
 		gpu-supply = <&buck4_reg>;
+		operating-points = <
+			/* KHz   uV */
+			600000 1150000
+			177000  812500
+		>;
 		
 		status = "disabled";
 	};
