--- a/arch/arm/configs/odroidxu3_defconfig
+++ b/arch/arm/configs/odroidxu3_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 4.9.13 Kernel Configuration
+# Linux/arm 4.9.20 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -3602,16 +3602,15 @@ CONFIG_DRM_PARADE_PS8622=y
 #
 CONFIG_MALI_MIDGARD=y
 # CONFIG_MALI_GATOR_SUPPORT is not set
-# CONFIG_MALI_MIDGARD_DVFS is not set
 # CONFIG_MALI_MIDGARD_ENABLE_TRACE is not set
-# CONFIG_MALI_DEVFREQ is not set
+CONFIG_MALI_DEVFREQ=y
 CONFIG_MALI_DMA_FENCE=y
 CONFIG_MALI_EXPERT=y
 # CONFIG_MALI_PRFCNT_SET_SECONDARY is not set
 # CONFIG_MALI_PLATFORM_FAKE is not set
 # CONFIG_MALI_PLATFORM_DEVICETREE is not set
 CONFIG_MALI_PLATFORM_THIRDPARTY=y
-CONFIG_MALI_PLATFORM_THIRDPARTY_NAME="odroid5422"
+CONFIG_MALI_PLATFORM_THIRDPARTY_NAME="exynos5422"
 # CONFIG_MALI_DEBUG is not set
 # CONFIG_MALI_NO_MALI is not set
 # CONFIG_MALI_TRACE_TIMELINE is not set
@@ -4571,6 +4570,7 @@ CONFIG_PRISM2_USB=m
 CONFIG_STAGING_MEDIA=y
 # CONFIG_I2C_BCM2048 is not set
 # CONFIG_MEDIA_CEC is not set
+# CONFIG_LIRC_STAGING is not set
 
 #
 # Android
