--- a/arch/arm/configs/odroidxu3_defconfig
+++ b/arch/arm/configs/odroidxu3_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.10.104 Kernel Configuration
+# Linux/arm 3.10.105 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -3211,10 +3211,11 @@ CONFIG_USB_G_HID=m
 CONFIG_USB_G_WEBCAM=m
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
+CONFIG_MMC_SUPPORT_STLOG=y
 CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC_CLKGATE=y
 CONFIG_MMC_EMBEDDED_SDIO=y
-CONFIG_MMC_PARANOID_SD_INIT=y
+# CONFIG_MMC_PARANOID_SD_INIT is not set
 
 #
 # MMC/SD/SDIO Card Drivers
@@ -3225,7 +3226,7 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
 # CONFIG_SDIO_UART is not set
 # CONFIG_MMC_TEST is not set
-# CONFIG_MMC_SUPPORT_BKOPS_MODE is not set
+CONFIG_MMC_SUPPORT_BKOPS_MODE=y
 
 #
 # MMC/SD/SDIO Host Controller Drivers
@@ -3238,8 +3239,11 @@ CONFIG_MMC_DW=y
 CONFIG_MMC_DW_BYPASS_FMP=y
 # CONFIG_MMC_DW_FMP_DM_CRYPT is not set
 CONFIG_MMC_DW_IDMAC=y
+# CONFIG_MMC_DW_64_IDMAC is not set
 CONFIG_MMC_DW_PLTFM=y
 CONFIG_MMC_DW_EXYNOS=y
+# CONFIG_MMC_DW_DEBUG is not set
+# CONFIG_MMC_DW_SKIP_CACHE_OP is not set
 # CONFIG_MMC_VUB300 is not set
 # CONFIG_MMC_USHC is not set
 # CONFIG_MEMSTICK is not set
@@ -3839,6 +3843,7 @@ CONFIG_NTFS_RW=y
 CONFIG_PROC_FS=y
 CONFIG_PROC_SYSCTL=y
 CONFIG_PROC_PAGE_MONITOR=y
+CONFIG_PROC_STLOG=y
 CONFIG_SYSFS=y
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
