--- a/arch/arm64/boot/dts/Makefile
+++ b/arch/arm64/boot/dts/Makefile
@@ -6,7 +6,7 @@ dtb-$(CONFIG_MACH_ESPRESSO7420) += exynos7420-espresso7420.dtb
 dtb-$(CONFIG_MACH_UNIVERSAL7420) += exynos7420-universal7420.dtb exynos7420-universal7420-ufs.dtb exynos7420-universal7420-ufs_rev00.dtb
 dtb-$(CONFIG_MACH_SMDK7580) += exynos7580-smdk7580.dtb
 dtb-$(CONFIG_BOARD_A3XELTE) += exynos7580-a3xelte_eur_open_00.dtb exynos7580-a3xelte_eur_open_01.dtb exynos7580-a3xelte_eur_open_02.dtb
-dtb-$(CONFIG_BOARD_J7ELTE) += exynos7580-a7xelte_eur_open_00.dts exynos7580-a7xelte_eur_open_01.dts exynos7580-a7xelte_eur_open_03.dts exynos7580-a7xelte_eur_open_08.dts
+dtb-$(CONFIG_BOARD_J7ELTE) += exynos7580-j7elte_rev00.dtb exynos7580-j7elte_rev04.dtb exynos7580-j7elte_rev06.dtb
 
 dtb-$(CONFIG_MACH_UNIVERSAL5433) += exynos5433-universal5433_rev02.dtb exynos5433-universal5433.dtb
 targets += dtbs
