--- a/arch/arm64/configs/lineageos_a5xelte_defconfig
+++ b/arch/arm64/configs/lineageos_a5xelte_defconfig
@@ -286,6 +286,7 @@ CONFIG_EXYNOS7580_DYNAMIC_CLUSTER_HOTPLUG=y
 CONFIG_EXYNOS_CONTENT_PATH_PROTECTION=y
 CONFIG_EXYNOS5_SETUP_MIPIPHY=y
 CONFIG_SAMSUNG_PRODUCT_SHIP=y
+CONFIG_BOARD_A5XELTE=y
 
 #
 # Flattened Device Tree based board for EXYNOS SoCs
