--- a/drivers/net/wireless/Makefile
+++ b/drivers/net/wireless/Makefile
@@ -68,8 +68,9 @@ obj-$(CONFIG_MACH_UNIVERSAL7580) += bcmdhd/dhd_custom_exynos.o
 endif
 
 ifneq ($(CONFIG_BCM43455),)
-obj-$(CONFIG_BCM43455)  += bcmdhd/
+obj-$(CONFIG_BCM43455)  += bcmdhd_mm/
 obj-$(CONFIG_MACH_UNIVERSAL7580) += bcmdhd/dhd_custom_exynos.o
 endif
+
 obj-$(CONFIG_BRCMFMAC)	+= brcm80211/
 obj-$(CONFIG_BRCMSMAC)	+= brcm80211/
