--- a/arch/arm64/configs/lineageos_a5xelte_defconfig
+++ b/arch/arm64/configs/lineageos_a5xelte_defconfig
@@ -299,11 +299,8 @@ CONFIG_MACH_UNIVERSAL7580=y
 CONFIG_EXYNOS_SPI_RESET_DURING_DSTOP=y
 CONFIG_EXYNOS_I2C_RESET_DURING_DSTOP=y
 CONFIG_EXYNOS_HSI2C_RESET_DURING_DSTOP=y
-CONFIG_TIMA=y
+# CONFIG_TIMA is not set
 # CONFIG_TIMA_LKMAUTH is not set
-CONFIG_TIMA_RKP=y
-CONFIG_RKP_KDP=y
-CONFIG_RKP_DMAP_PROT=y
 # CONFIG_TIMA_TEST_INFRA is not set
 
 #
@@ -1039,7 +1036,6 @@ CONFIG_BLK_DEV_RAM_SIZE=16384
 # CONFIG_ENCLOSURE_SERVICES is not set
 # CONFIG_APDS9802ALS is not set
 # CONFIG_ISL29003 is not set
-CONFIG_KNOX_KAP=y
 # CONFIG_ISL29020 is not set
 # CONFIG_SENSORS_TSL2550 is not set
 # CONFIG_SENSORS_BH1780 is not set
@@ -3569,11 +3565,6 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_AFFS_FS is not set
 CONFIG_ECRYPT_FS=y
 # CONFIG_ECRYPT_FS_MESSAGING is not set
-CONFIG_WTL_ENCRYPTION_FILTER=y
-CONFIG_ECRYPT_FS_VIRTUAL_FAT_XATTR=y
-CONFIG_SDP=y
-# CONFIG_SDP_KEY_DUMP is not set
-CONFIG_DLP=y
 # CONFIG_HFS_FS is not set
 # CONFIG_HFSPLUS_FS is not set
 # CONFIG_BEFS_FS is not set
@@ -3685,7 +3676,6 @@ CONFIG_PANIC_ON_OOPS_VALUE=0
 # CONFIG_DETECT_HUNG_TASK is not set
 CONFIG_SCHED_DEBUG=y
 # CONFIG_SCHEDSTATS is not set
-# CONFIG_TIMER_STATS is not set
 # CONFIG_DEBUG_OBJECTS is not set
 # CONFIG_SLUB_DEBUG_ON is not set
 # CONFIG_SLUB_STATS is not set
