--- a/arch/arm64/configs/lineageos_s5neolte_defconfig
+++ b/arch/arm64/configs/lineageos_s5neolte_defconfig
@@ -281,7 +281,7 @@ CONFIG_EXYNOS_ASV_MARGIN_TEST=y
 # CONFIG_SKIP_HW_BREAKPOINT is not set
 CONFIG_CAL_SYS_PWRDOWN=y
 # CONFIG_EXYNOS7580_QUAD is not set
-CONFIG_EXYNOS7580_DYNAMIC_CLUSTER_HOTPLUG=y
+# CONFIG_EXYNOS7580_DYNAMIC_CLUSTER_HOTPLUG is not set
 CONFIG_EXYNOS_CONTENT_PATH_PROTECTION=y
 CONFIG_EXYNOS5_SETUP_MIPIPHY=y
 CONFIG_SAMSUNG_PRODUCT_SHIP=y
@@ -453,6 +453,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
+CONFIG_LAZYPLUG=y
 
 #
 # ARM CPU frequency scaling drivers
