--- a/arch/arm64/configs/lineageos_a3xelte_defconfig
+++ b/arch/arm64/configs/lineageos_a3xelte_defconfig
@@ -3505,6 +3505,8 @@ CONFIG_QUOTACTL=y
 CONFIG_FUSE_FS=y
 CONFIG_CUSE=y
 CONFIG_GENERIC_ACL=y
+CONFIG_DYNAMIC_FSYNC=y
+CONFIG_ASYNC_FSYNC=y
 
 #
 # Caches
