--- a/drivers/watchdog/Kconfig
+++ b/drivers/watchdog/Kconfig
@@ -491,7 +491,10 @@ config IXP4XX_WATCHDOG
 
 config S3C2410_WATCHDOG
 	tristate "S3C2410 Watchdog"
+	depends on ARCH_S3C24XX || ARCH_S3C64XX || ARCH_S5PV210 || ARCH_EXYNOS || \
+		   COMPILE_TEST
 	select WATCHDOG_CORE
+	select MFD_SYSCON if ARCH_EXYNOS
 	help
 	  Watchdog timer block in the Samsung SoCs. This will reboot
 	  the system when the timer expires with the watchdog enabled.
@@ -503,18 +506,6 @@ config S3C2410_WATCHDOG
 
 	  The driver can be built as a module by choosing M, and will
 	  be called s3c2410_wdt
-
-config S3C2410_SHUTDOWN_REBOOT
-	bool "Support watchdog reset after watchdog shutdown"
-	depends on S3C2410_WATCHDOG
-	default n
-	help
-	  This config disable the shutdown function of S3C2410 watchdog.
-	  To prevent stuck after watchdog driver shutdown, shutdown
-	  function will not stop or disable watchdog and it will just
-	  kick 30 second. It will prevent being stucked in reset
-	  sequence with some other failure.
-	  This feature is not recommeneded for debugging.
 
 config SA1100_WATCHDOG
 	tristate "SA1100/PXA2xx watchdog"
