clocksource: exynos_mct: restore back to upstream
This patch restores the exynos_mct driver back to the upstream version. The
Pixel version of the driver is moved OOT now.

Signed-off-by: Daniel Mentz <danielmentz@google.com>
Change-Id: I3554f5b837750a12ff058cd4d1805b57ec77a637

--- a/drivers/clocksource/Kconfig
+++ b/drivers/clocksource/Kconfig
@@ -416,7 +416,7 @@ config ATMEL_TCB_CLKSRC
 	  Support for Timer Counter Blocks on Atmel SoCs.
 
 config CLKSRC_EXYNOS_MCT
-	tristate "Exynos multi core timer driver"
+	bool "Exynos multi core timer driver" if COMPILE_TEST
 	depends on ARM || ARM64
 	help
 	  Support for Multi Core Timer controller on Exynos SoCs.
@@ -454,7 +454,7 @@ config SYS_SUPPORTS_SH_CMT
 	bool
 
 config MTK_TIMER
-	bool "Mediatek timer driver"
+	bool "Mediatek timer driver" if COMPILE_TEST
 	depends on HAS_IOMEM
 	select TIMER_OF
 	select CLKSRC_MMIO
