thermal: move samsung/google drivers out-of-tree
This removes the following drivers, relocated to an out-of-tree repo:
  - GSOC_PMIC_THERMAL
  - GOOGLE_BCL
  - GS101_THERMAL_V2
  - EXYNOS_ACPM_THERMAL
  - EXYNOS_CPU_THERMAL
  - GPU_THERMAL
  - ISP_THERMAL

Signed-off-by: Carlos Llamas <cmllamas@google.com>
Change-Id: I0bd90e78584e75d2cb1c9588b036297b9e92695f

--- a/drivers/thermal/Kconfig
+++ b/drivers/thermal/Kconfig
@@ -441,9 +441,8 @@ source "drivers/thermal/ti-soc-thermal/Kconfig"
 endmenu
 
 menu "Samsung thermal drivers"
-depends on (ARCH_EXYNOS || SOC_GOOGLE) || COMPILE_TEST
+depends on ARCH_EXYNOS || COMPILE_TEST
 source "drivers/thermal/samsung/Kconfig"
-source "drivers/thermal/google/Kconfig"
 endmenu
 
 menu "STMicroelectronics thermal drivers"
