--- a/drivers/phy/samsung/Kconfig
+++ b/drivers/phy/samsung/Kconfig
@@ -76,36 +76,18 @@ config PHY_S5PV210_USB2
 	  particular SoC is compiled in the driver. In case of S5PV210 two phys
 	  are available - device and host.
 
-config PHY_EXYNOS_USBDRD
-	tristate "Exynos SoC series USB DRD PHY driver"
-	help
-	  Enable USB DRD PHY support for Exynos SoC series.
-	  This driver provides PHY interface for USB 3.0 DRD controller
-	  present on Exynos SoC series.
-
-config PHY_SAMSUNG_USB_CAL
-	bool "Samsung USB PHY CAL"
-	depends on PHY_EXYNOS_USBDRD
+config PHY_EXYNOS5_USBDRD
+	tristate "Exynos5 SoC series USB DRD PHY driver"
+	depends on (ARCH_EXYNOS && OF) || COMPILE_TEST
+	depends on HAS_IOMEM
+	depends on USB_DWC3_EXYNOS
+	select GENERIC_PHY
+	select MFD_SYSCON
 	default y
 	help
-	  Enable this to support CAL (Chip Abstraction Layer)
-	  for Samsung USB PHY controller.
-	  This driver provides PHY interface.
-
-config PHY_SAMSUNG_USB_GEN2
-	tristate "Exynos SoC series USB DRD for GEN2"
-	default n
-	help
-	  Support SAMSUNG USB3.1 GEN2 PHY.
-	  This driver provides PHY interface for USB3.1 GEN2 PHY.
-
-config PHY_SAMSUNG_USB_GEN2_V4
-	tristate "Exynos SoC series USB DRD for GEN2 V4"
-	default n
-	help
-	  Support SAMSUNG USB3.1 GEN2 V4 PHY. GEN2 V4 PHY needs
-	  a different setting compared to GEN2 V2 PHY.
-	  This driver provides PHY interface for USB3.1 GEN2 V4 PHY.
+	  Enable USB DRD PHY support for Exynos 5 SoC series.
+	  This driver provides PHY interface for USB 3.0 DRD controller
+	  present on Exynos5 SoC series.
 
 config PHY_EXYNOS5250_SATA
 	tristate "Exynos5250 Sata SerDes/PHY driver"
@@ -121,17 +103,3 @@ config PHY_EXYNOS5250_SATA
 	  Exynos5250 based SoCs.This SerDes/Phy supports SATA 1.5 Gb/s,
 	  SATA 3.0 Gb/s, SATA 6.0 Gb/s speeds. It supports one SATA host
 	  port to accept one SATA device.
-
-config PHY_EXYNOS_MIPI
-	tristate "Samsung EXYNOS SoC MIPI CSI/DSI D/C-PHY driver"
-	select GENERIC_PHY
-	help
-	  Support for MIPI CSI and MIPI DSI DPHY found on Samsung
-	  and EXYNOS SoCs.
-
-config PHY_EXYNOS_MIPI_DSIM
-	tristate "Samsung EXYNOS SoC MIPI DSI D-PHY driver"
-	select GENERIC_PHY
-	help
-	  Support for MIPI DSI DPHY found on Samsung
-	  and EXYNOS SoCs.
